# MeshReader

./: .gitignore  CMakeLists.txt  CMakePresets.json  Conanfile.txt  README.md  conan_toolchain.cmake  main.cpp
cmake/: glew-release-x86_64-data.cmake  glfw3-config-version.cmake  glfw3-release-x86_64-data.cmake  glu-release-x86_64-data.cmake  module-GLEW-release-x86_64-data.cmake  opengl_system-release-x86_64-data.cmake
include/: gl_polygon.h  hc_polygon.h  polygon.h
